# ChangeLog for app-portage/find_cruft
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*find_cruft-1.0 (16 May 2013)

  16 May 2013; Martin Väth <martin@mvath.de>:
  New ebuild from scratch.