@@ -1,1 +1,1 @@
-DIST find_cruft-1.0.tar.gz 6834 SHA256 32696f24f375a1d63df1ac9453c0a4dad1bd02d614aa56cdb7a68308a8593efa SHA512 d6a8b36381e94e7dad18bbc4a3be4b3ec17c0d95fd9686ff05697c72016411bd8dbb2b7b03f0111478cd401a8f6b10809df675018d5dd430a893882b3e34eacb WHIRLPOOL f59517df7482be5f5f9a7d26d37a0606a0f24e545b161cf8bba6d1585c2075caf94f3b23ab912d25e55e04646369ec543945f56ee87d70be96e41a93bb5e2ac8
+DIST find_cruft-2.0.tar.gz 9155 SHA256 a474353301dfaaca90ab9fe6212e471e2b73050380e23eb6dc9da732c869fb13 SHA512 db55715421842ecbb5143f9d397e8eb2a577d40840219e54882c5c890391e973d8d3e450c7ce05343ca6cef63a21ccbd80e21bea4a0b9cc7893570c22fb60db6 WHIRLPOOL 3db3cef413c0a037f2adca3879e6397a6a230250bc41e50938665083abbbc97e497a9eea8754eedb8be446b32afe0834f1c0b2c601377aa5b6066c02f9c58638
