@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*find_cruft-2.0 (18 May 2013)
+
+  18 May 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Create /etc. Warn if eix is not installed.
+
 *find_cruft-1.0 (16 May 2013)
 
   16 May 2013; Martin Väth <martin@mvath.de>:
